unpackaged/main/default/objects/Account/fields/CMPL123__Account_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Account_Email__c</fullName>
        <description>Primary email for account</description>
        <label>Email</label>
        <type>Email</type>
    </CustomField>