unpackaged/main/default/objects/Account/fields/CMPL123__Account_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Account_Type__c</fullName>
        <description>Indicates whether the account is a healthcare provider, healthcare organization, patient, or distributor.</description>
        <formula>CASE($RecordType.Name ,  "ACCOUNT-HCO", "HCO",  "ACCOUNT-HCP",  "HCP", "NON-ACCOUNT-HCP", "HCP", "PATIENT", "PATIENT" , "")[disable]</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </CustomField>