unpackaged/main/default/objects/Account/fields/CMPL123__Commercial_Account__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Commercial_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commercial Account</description>
        <inlineHelpText>Commercial Account</inlineHelpText>
        <label>Commercial Account</label>
        <type>Checkbox</type>
    </CustomField>