unpackaged/main/default/objects/Account/fields/CMPL123__CRM_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__CRM_ID__c</fullName>
        <description>HCPO/HCO identifier provided from CRM system</description>
        <label>CRM ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>