unpackaged/main/default/objects/Account/fields/CMPL123__Date_of_Birth__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Date_of_Birth__c</fullName>
        <description>Date upon which patient was born.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </CustomField>