unpackaged/main/default/objects/Account/fields/CMPL123__Date_of_Death__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Date_of_Death__c</fullName>
        <description>Date upon which patient was pronounced dead.</description>
        <label>Date of Death</label>
        <type>Date</type>
    </CustomField>