unpackaged/main/default/objects/Account/fields/CMPL123__First_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__First_Name__c</fullName>
        <description>HCP or patient first name.</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>