unpackaged/main/default/objects/Account/fields/CMPL123__Gender__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Gender__c</fullName>
        <description>Patient's gender.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>