unpackaged/main/default/objects/Account/fields/CMPL123__IMS_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__IMS_ID__c</fullName>
        <description>HCPO/HCO identifier provided from IMS</description>
        <label>IMS ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>