unpackaged/main/default/objects/Account/fields/CMPL123__Last_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Last_Name__c</fullName>
        <description>HCP or patient last name.</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>