unpackaged/main/default/objects/Account/fields/CMPL123__MDM_GUID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDM_GUID__c</fullName>
        <description>HCPO/HCO globally unique identifier provided from MDM system</description>
        <label>MDM GUID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>