unpackaged/main/default/objects/Account/fields/CMPL123__ME_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ME_ID__c</fullName>
        <description>Medical Education Number for the physician</description>
        <label>ME #</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>