unpackaged/main/default/objects/Account/fields/CMPL123__Notified__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient was informed of risk.</description>
        <label>Notified?</label>
        <type>Checkbox</type>
    </CustomField>