unpackaged/main/default/objects/Account/fields/CMPL123__NPI_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__NPI_ID__c</fullName>
        <description>National Provider Identifier</description>
        <label>NPI #</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>