unpackaged/main/default/objects/Account/fields/CMPL123__Opt_out_of_Tracking__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Opt_out_of_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient declined to be tracked in the database.</description>
        <label>Opt out of Tracking?</label>
        <type>Checkbox</type>
    </CustomField>