unpackaged/main/default/objects/Account/fields/CMPL123__Patient_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Patient_ID__c</fullName>
        <description>Unique identifier for the patient.  For example the social security number.</description>
        <label>Patient ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>