unpackaged/main/default/objects/Account/fields/CMPL123__Patient_ID_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Patient_ID_Type__c</fullName>
        <description>Type of patient ID.</description>
        <label>Patient ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>SIN</fullName>
                </value>
                <value>
                    <fullName>Patient Declined</fullName>
                </value>
                <value>
                    <fullName>Unable to Obtain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>