unpackaged/main/default/objects/Account/fields/CMPL123__Salutation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Salutation__c</fullName>
        <description>HCP or patient salutation.</description>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>