unpackaged/main/default/objects/Account/fields/CMPL123__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Status__c</fullName>
        <description>Audit status for an account.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Compliant</fullName>
                    <default>true</default>
                    <label>Compliant</label>
                </value>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>