unpackaged/main/default/objects/Account/fields/CMPL123__Suffix__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Suffix__c</fullName>
        <description>HCP or patient suffix</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>