unpackaged/main/default/objects/Account/fields/CMPL123__Third_Party_Release__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Third_Party_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the patient declined the release of their information.</description>
        <label>Information Release?</label>
        <type>Checkbox</type>
    </CustomField>