unpackaged/main/default/objects/Account/fields/CMPL123__WK_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__WK_ID__c</fullName>
        <description>HCPO/HCO identifier provided from Wolters Kluwer</description>
        <label>WK ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>