unpackaged/main/default/objects/Account/fields/Test_External_Id_1__c.field-meta.xml
<CustomField>
        <fullName>Test_External_Id_1__c</fullName>
        <externalId>true</externalId>
        <label>Test External Id 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>