unpackaged/main/default/objects/Account/recordTypes/CMPL123__ACCOUNT_HCO.recordType-meta.xml
<RecordType>
        <fullName>CMPL123__ACCOUNT_HCO</fullName>
        <active>false</active>
        <description>Health Care Organization</description>
        <label>ACCOUNT-HCO</label>
    </RecordType>