unpackaged/main/default/objects/Account/recordTypes/CMPL123__ACCOUNT_HCP.recordType-meta.xml
<RecordType>
        <fullName>CMPL123__ACCOUNT_HCP</fullName>
        <active>false</active>
        <description>Health Care Professional</description>
        <label>ACCOUNT-HCP</label>
    </RecordType>