unpackaged/main/default/objects/Account/recordTypes/CMPL123__NON_ACCOUNT_HCP.recordType-meta.xml
<RecordType>
        <fullName>CMPL123__NON_ACCOUNT_HCP</fullName>
        <active>false</active>
        <description>Non Commercial Health Care Professional</description>
        <label>NON-ACCOUNT-HCP</label>
    </RecordType>