unpackaged/main/default/objects/Account/recordTypes/CMPL123__PATIENT.recordType-meta.xml
<RecordType>
        <fullName>CMPL123__PATIENT</fullName>
        <active>false</active>
        <description>Patient</description>
        <label>PATIENT</label>
    </RecordType>